Add Simple Notes app

--- a/public/styles.css
+++ b/public/styles.css
@@ -346,6 +346,10 @@ nav a {
   background-image: url("./images/weather-thumbnail.png");
 }
 
+.notes {
+  background-image: url("./images/notes-thumbnail.png");
+}
+
 .workout-tracker {
   background-image: url("./images/workout-tracker-thumbnail.png");
 }
